--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=demo
 spring.jpa.hibernate.ddl-auto=update
-
+#spring.datasource.url= db_url
+#spring.datasource.username= db_username
+#spring.datasource.password= db_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.level.org.hibernate.SQL=DEBUG
